MJ 05/01/2007
- Fixed a bug in examples.loadbalance.LBObserver

MJ 01/12/2006
- Restored ExtendedRandom to its state in release 1.0.1 and modified
  CommonState to respect that interface

AM 22/11/2006
- Added the possibility of customizing the Random generator through
  a new configuration parameter (random). The specified generator
  must extend ExtendedRandom.

AM 19/11/2006
- Modified CDSimulator, EDSimulator, in order to get rid of 
  the "fake" parameters. Now CheckConfig stops simulations
  by simple setting simulation.cycle or simulation.endtime to 0.
- Added a new transport class for trace initialization. Unlike
  KingParser, this class reads a more compact, binary format
  (described in the file); this implies a large gain with
  respect to efficiency (less than a second w.r.t. to several 
  seconds). 

MJ 18/11/2006
- Added the possibility to shuffle iteration order without actually
  shuffling the nodes in the network. This however needs more memory.
  It can be accessed by a new parameter "shuffle" to controls
  FullNextCycle and NextCycle, which is not defined by default.
- Added a new example on using the event based engine, and also added
  a simple tutorial to the web page about it.

AM 28/10/2006
- Moved the ID creation before the creation of the Protocol objects
  belonging to a node. This solve problems for Protocols that
  assume that the ID field was filled.
- Added a MemoryObserver reports to provide information about
  memory usage.
- Modified peersim.vector.Getter and peersim.vector.GetterSetterFinder
  to handle boolean values as numbers (0/1). This enables to use class 
  from the vector package to perform statistics on boolean fields.
- Modified persim.vector.VectorObserver to add the capability to
  stop the simulation when one of the aggregate values is equal
  to a predefined parameter.
- Added the VectorComparator class to be used to sort node
  arrays based on a specified getter.